--- a/seu-repositorio-portfolio/exercicios/lab01-dom/index.html
+++ b/seu-repositorio-portfolio/exercicios/lab01-dom/index.html
@@ -1,13 +1,36 @@
-<!-- Lab 01 - Manipulação do DOM -->
 <!DOCTYPE html>
-<html lang='pt-BR'>
+<html lang="pt-br">
 <head>
-<meta charset='UTF-8'>
-<title>Lab 01 - DOM</title>
-<link rel='stylesheet' href='style.css'>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Lab 01 - DOM e Arrays</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1>Lab 01 - Manipulação do DOM</h1>
-<script src='script.js'></script>
+
+    <main class="container">
+        <h1>Lab 01: Manipulando Arrays com DOM</h1>
+
+        <section class="controle">
+            <input type="text" id="valorInput" placeholder="Digite um valor">
+            <button id="btnPush">Push (Adicionar no Fim)</button>
+            <button id="btnUntshift">Unshift (Adicionar no Início)</button>
+        </section>
+
+        <section class="controle">
+            <button id="btnPop">Pop (Remover do Fim)</button>
+            <button id="btnShift">Shift (Remover do Início)</button>
+        </section>
+
+        <hr>
+
+        <h2>Dados do Array:</h2>
+        <div id="arrayDisplay" class="array-container">
+            </div>
+
+        <a href="../../index.html" class="voltar-link">&larr; Voltar ao Portfólio</a>
+    </main>
+
+    <script src="script.js"></script>
 </body>
 </html>
