--- a/seu-repositorio-portfolio/exercicios/lab02-arrays/index.html
+++ b/seu-repositorio-portfolio/exercicios/lab02-arrays/index.html
@@ -1,1 +1,36 @@
-<!DOCTYPE html><html lang='pt-BR'><head><meta charset='UTF-8'><title>Lab 02 - Arrays</title><link rel='stylesheet' href='style.css'></head><body><h1>Lab 02 - Métodos de Array</h1><script src='script.js'></script></body></html>
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Lab 02 - Recriando Funções de Array</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+    <main class="container">
+        <h1>Lab 02: Recriando Funções com For/Slice</h1>
+
+        <section class="controle">
+            <input type="text" id="valorInput" placeholder="Digite um valor">
+            <button id="btnPush">Push (Adicionar no Fim)</button>
+            <button id="btnUntshift">Unshift (Adicionar no Início)</button>
+        </section>
+
+        <section class="controle">
+            <button id="btnPop">Pop (Remover do Fim)</button>
+            <button id="btnShift">Shift (Remover do Início)</button>
+        </section>
+
+        <hr>
+
+        <h2>Dados do Array:</h2>
+        <div id="arrayDisplay" class="array-container">
+            </div>
+
+        <a href="../../index.html" class="voltar-link">&larr; Voltar ao Portfólio</a>
+    </main>
+
+    <script src="script.js"></script>
+</body>
+</html>
