--- a/seu-repositorio-portfolio/exercicios/lab05-busca-binaria/index.html
+++ b/seu-repositorio-portfolio/exercicios/lab05-busca-binaria/index.html
@@ -1,1 +1,45 @@
-<!DOCTYPE html><html lang='pt-BR'><head><meta charset='UTF-8'><title>Lab 05 - Busca Binária</title><link rel='stylesheet' href='style.css'></head><body><h1>Lab 05 - Pesquisa Sequencial e Binária</h1><script src='script.js'></script></body></html>
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Lab 05 - Pesquisa Sequencial e Binária</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+    <main class="container">
+        <h1>Lab 05: Pesquisa Sequencial e Binária</h1>
+
+        <section class="controle">
+            <input type="number" id="valorPush" placeholder="Digite um valor para adicionar">
+            <button id="btnPush">Push</button>
+        </section>
+
+        <hr>
+
+        <section class="controle">
+            <input type="number" id="valorPesquisa" placeholder="Digite um valor para pesquisar">
+            <button id="btnPesquisar">Pesquisar (Sequencial)</button>
+            <button id="btnPesquisarBinaria">Pesquisar (Binária)</button>
+        </section>
+        
+        <section class="controle-sort">
+            <button id="btnSort" class="btn-acao">Sort (Ordenar Array)</button>
+        </section>
+
+        <hr>
+
+        <h2>Dados do seu array:</h2>
+        <div id="arrayDisplay" class="array-container">
+            </div>
+        
+        <h2>Resultado da Pesquisa:</h2>
+        <p id="resultadoDisplay" class="resultado">-</p>
+
+        <a href="../../index.html" class="voltar-link">&larr; Voltar ao Portfólio</a>
+    </main>
+
+    <script src="script.js"></script>
+</body>
+</html>
