--- a/seu-repositorio-portfolio/index.html
+++ b/seu-repositorio-portfolio/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Portfólio Paulo Vitor — exercícios e projetos de programação web.">
     <title>Meu Portfólio - Paulo Vitor</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/.css">
 </head>
 <body>
     <header class="site-header container" role="banner">
@@ -43,9 +43,11 @@
             <h2 style="margin-top:28px">Outros Exercícios</h2>
             <div class="projects-grid">
                 <a class="project-card" href="exercicios/lab05-busca-binaria/index.html">
+                    
                     <h3>Lab 05 - Pesquisa Sequencial e Binária</h3>
                     <p>Implementações e comparação entre busca sequencial e busca binária.</p>
                 </a>
+                
 
                 <a class="project-card" href="exercicios/questao04.html">
                     <h3>Exercício 04 - Calculadora Simples</h3>
